--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 REACT_APP_SITE_TITLE=Josh Espanola Portfolio
 # Add other env variables here
+
+# Analytics (optional)
+REACT_APP_GOOGLE_ANALYTICS_ID=
+REACT_APP_EMAILJS_SERVCICE_ID="sservice_7432qxi"
+REACT_APP_EMAILJS_TEMPLATE_ID="template_0lmk6bo"
+REACT_APP_EMAILJS_PUBLIC_KEY="jD2a6jU-dTOg_IX-G"
