--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ REACT_APP_SITE_TITLE=Josh Espanola Portfolio
 REACT_APP_GOOGLE_ANALYTICS_ID=
 REACT_APP_EMAILJS_SERVCICE_ID="service_7432qxi"
 REACT_APP_EMAILJS_TEMPLATE_ID="template_0lmk6bo"
-REACT_APP_EMAILJS_PUBLIC_KEY="jD2a6jU-dTOg_IX-G"
+REACT_APP_EMAILJS_PUBLIC_KEY="ZV5ZVULgsFCNnUYG-"
