--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ REACT_APP_SITE_TITLE=Josh Espanola Portfolio
 
 # Analytics (optional)
 REACT_APP_GOOGLE_ANALYTICS_ID=
-REACT_APP_EMAILJS_SERVCICE_ID="service_7432qxi"
-REACT_APP_EMAILJS_TEMPLATE_ID="template_0lmk6bo"
-REACT_APP_EMAILJS_PUBLIC_KEY="ZV5ZVULgsFCNnUYG-"
+REACT_APP_EMAILJS_SERVCICE_ID=service_00psn2b
+REACT_APP_EMAILJS_TEMPLATE_ID=template_37exxts
+REACT_APP_EMAILJS_PUBLIC_KEY=ZV5ZVULgsFCNnUYG-
